// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should renderer a link home in isolated mode 1`] = `
<Consumer(ToolbarButton)
  href="blank#/"
  title="Show all components"
>
  <MdFullscreenExit />
</Consumer(ToolbarButton)>
`;

exports[`should renderer a link to example isolated mode 1`] = `
<Consumer(ToolbarButton)
  href="blank#!/Pizza/3"
  title="Open isolated"
>
  <MdFullscreen />
</Consumer(ToolbarButton)>
`;

exports[`should renderer a link to isolated mode 1`] = `
<Consumer(ToolbarButton)
  href="blank#!/Pizza"
  title="Open isolated"
>
  <MdFullscreen />
</Consumer(ToolbarButton)>
`;
